efk/appteam/kibana/kibana.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kibana-appteam
  namespace: tectonic-system
  labels:
    component: kibana-appteam
spec:
  replicas: 1
  selector:
    matchLabels:
     component: kibana-appteam
  template:
    metadata:
      labels:
        component: kibana-appteam
    spec:
      containers:
      - name: kibana
        image: cfontes/kibana-xpack-less:5.5.0
        resources:
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5601
          name: kibana
          protocol: TCP
